news updates: fix updates not being visible.

--- a/app/javascript/src/styles/common/news.scss
+++ b/app/javascript/src/styles/common/news.scss
@@ -2,7 +2,6 @@ div#news-updates {
   padding: 5px;
   background: var(--news-updates-background);
   border-bottom: 2px solid var(--news-updates-border-color);
-  overflow: hidden;
   font-size: var(--text-sm);
 
   ul {
